// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid tests it should render properly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Goku
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`GifGrid tests it should show items when imgs are loaded through useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Goku
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Any title"
      url="https://localhost/any.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Any title"
      url="https://localhost/any.jpg"
    />
  </div>
</Fragment>
`;
